<resources>
    <string name="app_name">Event Attendance</string>
    <string name="name">Name</string>
    <string name="no_ktp">No. KTP</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="participant">Guest</string>
    <string name="participant_notfound">Guest Not Found</string>
    <string name="message_not_found">Sorry, guest not registered !</string>
    <string name="searching">Searching</string>
    <string name="please_wait">Please wait ...</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="invited">Invited</string>
    <string name="arrived">Arrived</string>
    <string name="Home">Home</string>
    <string name="guest_list">Guest List</string>
    <string name="about">About</string>
    <string name="more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan QR Code Here :</string>
</resources>
