<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahmaadyunus.eventattendance.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.ahmaadyunus.eventattendance.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="?attr/actionBarSize"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/scan"
                android:layout_marginBottom="30dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Scan guest"
                android:id="@+id/scan_btn"
                android:padding="10dp"
                android:background="@color/colorPrimaryLight"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@color/colorPrimaryDark"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/invited"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/invited_num_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />

            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.0005"
                android:layout_height="match_parent"
                android:background="@color/colorDivider"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/arrived"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/arrived_num_TV"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


</FrameLayout>
